--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,52 @@
+@charset "UTF-8";
+
+@import "00_settings/_setting.vars";
+@import "01_tools/_tool.mixins";
+@import "01_tools/_tool.utils";
+
+@import "02_defaults/_default.normalize";
+@import "02_defaults/_default.reset";
+@import "02_defaults/_default.defaults";
+
+@import "03_objects/_object.grid";
+@import "03_objects/_object.buttons";
+@import "03_objects/_object.lists";
+@import "03_objects/_object.constructions";
+@import "03_objects/_object.forms";
+@import "03_objects/_object.icons";
+
+@import "04_components/_component.layout";
+@import "04_components/_component.header";
+@import "04_components/_component.headings";
+@import "04_components/_component.sections";
+@import "04_components/_component.lists";
+@import "04_components/_component.sliders";
+@import "04_components/_component.others";
+
+// @import '09_vendor/flatpickr.min.css';
+// @import '09_vendor/flatpickr.theme.min.css';
+// @import '09_vendor/flickity.css';
+// @import '09_vendor/jquery.mCustomScrollbar.css';
+// @import '09_vendor/balloon';
+// @import '09_vendor/jquery.sweet-dropdown.css';
+
+// @import '10_misc/_shame.css';
+// @import '02_defaults/_default.print.css';
+// @import '01_tools/_tools.debugcss.css';
+
+/*
+* Testing autoprefixer and mixins
+*/
 .zzzzz {
-	/* testing autoprefixer */
-	display: flex;
 	background: linear-gradient(#e98a00, #f5aa2f);
+	background: linear-gradient(217deg, rgba(255, 0, 0, 0.8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%);
+	font-size: clamp-calc(480px, 1280px, 16px, 64px);
+	border-bottom: clamp-calc(480px, 1280px, 16px, 64px) solid red;
+	display: flex;
 	display: grid;
+	appearance: none;
+
+	@at-root .selector#{&} {
+		display: block;
+	}
 }
