--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,27 +1,27 @@
 @charset "UTF-8";
 
-@import "00_settings/_setting.vars";
-@import "01_tools/_tool.mixins";
-@import "01_tools/_tool.utils";
+@import "00_settings/setting.vars";
+@import "01_tools/tool.mixins";
+@import "01_tools/tool.utils";
 
-@import "02_defaults/_default.normalize";
-@import "02_defaults/_default.reset";
-@import "02_defaults/_default.defaults";
+@import "02_defaults/default.normalize";
+@import "02_defaults/default.reset";
+@import "02_defaults/default.defaults";
 
-@import "03_objects/_object.grid";
-@import "03_objects/_object.buttons";
-@import "03_objects/_object.lists";
-@import "03_objects/_object.constructions";
-@import "03_objects/_object.forms";
-@import "03_objects/_object.icons";
+@import "03_objects/object.grid";
+@import "03_objects/object.buttons";
+@import "03_objects/object.lists";
+@import "03_objects/object.constructions";
+@import "03_objects/object.forms";
+@import "03_objects/object.icons";
 
-@import "04_components/_component.layout";
-@import "04_components/_component.header";
-@import "04_components/_component.headings";
-@import "04_components/_component.sections";
-@import "04_components/_component.lists";
-@import "04_components/_component.sliders";
-@import "04_components/_component.others";
+@import "04_components/component.layout";
+@import "04_components/component.header";
+@import "04_components/component.headings";
+@import "04_components/component.sections";
+@import "04_components/component.lists";
+@import "04_components/component.sliders";
+@import "04_components/component.others";
 
 // @import '09_vendor/flatpickr.min.css';
 // @import '09_vendor/flatpickr.theme.min.css';
@@ -30,13 +30,12 @@
 // @import '09_vendor/balloon';
 // @import '09_vendor/jquery.sweet-dropdown.css';
 
-// @import '10_misc/_shame.css';
-// @import '02_defaults/_default.print.css';
-// @import '01_tools/_tools.debugcss.css';
+// @import '10_misc/shame';
+@import "02_defaults/default.print";
 
-/*
-* Testing autoprefixer and mixins
-*/
+/*---------------------------------------
+	Testing autoprefixer and mixins
+---------------------------------------*/
 .zzzzz {
 	background: linear-gradient(#e98a00, #f5aa2f);
 	background: linear-gradient(217deg, rgba(255, 0, 0, 0.8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%);
