--- a/src/scss/03_objects/object.buttons.scss
+++ b/src/scss/03_objects/object.buttons.scss
@@ -2,7 +2,8 @@
     #Buttons
 \*------------------------------------*/
 .o-btn {
-	--color: var(--c-brand);
+	--color-txt: #fff;
+	--color-bg: var(--c-brand);
 	--color-hover: var(--c-brand-500);
 
 	appearance: none;
@@ -11,11 +12,11 @@
 	cursor: pointer;
 
 	padding: var(--btn-padding-v) var(--btn-padding-h);
-	border: var(--btn-border-width) solid var(--color);
+	border: var(--btn-border-width) solid var(--color-bg);
 	border-radius: var(--base-border-radius);
-	background-color: var(--color);
+	background-color: var(--color-bg);
 	font-size: var(--base-font-size);
-	color: var(--c-grey--dark);
+	color: var(--color-txt);
 
 	&:active {
 		position: relative;
@@ -43,7 +44,7 @@
 	/* ghost */
 	&--ghost {
 		background-color: transparent;
-		color: var(--color);
+		color: var(--color-bg);
 
 		&:hover {
 			background-color: transparent;
@@ -56,7 +57,8 @@
 	*/
 	/* accent buttton */
 	&--accent {
-		--color: var(--c-accent);
+		--color-txt: #fff;
+		--color-bg: var(--c-accent);
 		--color-hover: var(--c-accent-700);
 	}
 }
