--- a/src/scss/03_objects/object.lists.scss
+++ b/src/scss/03_objects/object.lists.scss
@@ -5,56 +5,56 @@
  *  No bullets
  */
 .o-listnobull {
-    list-style-type: none;
+	list-style-type: none;
 
-    li {
-        margin-left: 0;
-        list-style-type: none;
-    }
+	li {
+		margin-left: 0;
+		list-style-type: none;
+	}
 }
 
 /**
  *  comma separated
  */
 .o-listcomma {
-    list-style: none;
+	list-style: none;
 
-    &__item {
-        display: inline-block;
-        margin: 0;
+	&__item {
+		display: inline-block;
+		margin: 0;
 
-        &:after {
-            content: '\002C''\00A0';
-        }
+		&:after {
+			content: "\002C""\00A0";
+		}
 
-        &:last-child {
-            &:after {
-                display: none;
-            }
-        }
-    }
+		&:last-child {
+			&:after {
+				display: none;
+			}
+		}
+	}
 }
 
 /**
  *  breadcrumbs
  */
 .o-listbread {
-    list-style: none;
+	list-style: none;
 
-    &__item {
-        display: inline-block;
-        margin: 0;
+	&__item {
+		display: inline-block;
+		margin: 0;
 
-        &:after {
-            margin: 0 0.5em;
-            content: '\002F';
-            opacity: 0.5;
-        }
+		&:after {
+			margin: 0 0.5em;
+			content: "\002F";
+			opacity: 0.5;
+		}
 
-        &:last-child {
-            &:after {
-                display: none;
-            }
-        }
-    }
+		&:last-child {
+			&:after {
+				display: none;
+			}
+		}
+	}
 }
