--- a/src/scss/03_objects/object.constructions.scss
+++ b/src/scss/03_objects/object.constructions.scss
@@ -22,11 +22,11 @@
 	--o-card--gap: 20px;
 
 	display: grid;
-	grid-gap: var(--o-card--gap);
+	gap: var(--o-card--gap);
 	grid-template-columns: auto 1fr;
 	align-items: center;
 
-	& > div {
+	> div {
 		> :first-child {
 			margin-top: 0;
 		}
@@ -38,5 +38,89 @@
 	/* media element */
 	&--media {
 		align-items: start;
+	}
+}
+
+/*---------------------------------------
+	c-zigzag
+---------------------------------------*/
+.c-zigzag {
+	--c-zigzag-gap: 20px;
+	--c-zigzag-img-to-edge: 1; /* 0 or 1. if you want it, use 1 */
+
+	display: grid;
+	gap: var(--c-zigzag-gap);
+
+	> * {
+		min-width: 0; // hack
+	}
+
+	@include bp(bp768) {
+		grid-template-columns: repeat(2, 1fr);
+		grid-auto-flow: dense;
+
+		> div {
+			&:nth-child(4n + 1),
+			&:nth-child(4n + 3) {
+				position: relative;
+
+				img {
+					position: absolute;
+					inset: 0;
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+			&:nth-child(4n + 1) {
+				margin-left: calc(calc(calc(200% - 100vw + var(--c-zigzag-gap)) / 2) * var(--c-zigzag-img-to-edge));
+			}
+			&:nth-child(4n + 3) {
+				grid-column: 2;
+				margin-right: calc(calc(calc(200% - 100vw + var(--c-zigzag-gap)) / 2) * var(--c-zigzag-img-to-edge));
+			}
+		}
+
+		/* variation if text block goes first */
+		&--text-first {
+			> div {
+				&:nth-child(4n + 1),
+				&:nth-child(4n + 3) {
+					position: static;
+
+					img {
+						position: static;
+						width: auto;
+						height: auto;
+						object-fit: none;
+					}
+				}
+				&:nth-child(4n + 1) {
+					margin-left: 0;
+				}
+				&:nth-child(4n + 3) {
+					grid-column: 2;
+					margin-right: 0;
+				}
+				&:nth-child(4n + 2),
+				&:nth-child(4n + 4) {
+					position: relative;
+
+					img {
+						position: absolute;
+						inset: 0;
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+				&:nth-child(4n + 2) {
+					margin-right: calc(calc(calc(200% - 100vw + var(--c-zigzag-gap)) / 2) * var(--c-zigzag-img-to-edge));
+				}
+				&:nth-child(4n + 4) {
+					margin-left: calc(calc(calc(200% - 100vw + var(--c-zigzag-gap)) / 2) * var(--c-zigzag-img-to-edge));
+				}
+			}
+		}
 	}
 }
